# agentic_prisoners_dilemma

./: README.md  prisoners_dilemma.py  pyproject.toml
runs/: draw_01.eval  draw_02.eval  participant_0_win_01.eval
