[project]
name = "prisoners-dilemma"
version = "0.1.0"
description = "Simulation of several agents in a prisoner's dilemma"
readme = "README.md"
requires-python = ">=3.13.2"
dependencies = [
    "accelerate>=1.5.2",
    "anthropic>=0.49.0",
    "black>=25.1.0",
    "inspect-ai>=0.3.75",
    "openai>=1.68.2",
    "protobuf>=6.30.1",
    "torch>=2.6.0",
    "transformers>=4.50.0",
]
